5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1635_2703.log
== TEST (2019-04-10 13:58:22) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):  
	mensagem = "Eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem.lower())
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:58:38) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):  
	mensagem = "Eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem.lower())
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:59:06) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade => 18):  
	mensagem = "Eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem.lower())
-- ERROR:
File "XXXX", line 3
    if (idade => 18):  
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:59:22) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade >= 18):  
	mensagem = "Eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem.lower())
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:59:32) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade >= 18):  
	mensagem = "Eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem.lower())
-- EXECUTION TIME:
0.179611
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
